my_notes/Interacting_with_python/python_shell.txt
bpython version 0.21 on top of Python 3.9.2 /usr/bin/python3
>>> 7 * 7
49
>>> 
>>> print("Hello:)
  File "<input>", line 1
    print("Hello:)
                  ^
SyntaxError: EOL while scanning string literal
>>> print("Hello:")
Hello:
>>> exit()


